--- a/notebooks/Kmatrix.ipynb
+++ b/notebooks/Kmatrix.ipynb
@@ -683,7 +683,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f637836fa90>]"
+       "[<matplotlib.lines.Line2D at 0x7ff2148479d0>]"
       ]
      },
      "execution_count": 23,
@@ -937,14 +937,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_232218/1772517211.py:5: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
+      "/tmp/ipykernel_276118/1772517211.py:5: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
       "  km_jordi = km_jordi / np.trapz(km_jordi, bin_centers)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f6379538940>"
+       "<matplotlib.legend.Legend at 0x7ff216f05820>"
       ]
      },
      "execution_count": 33,
@@ -1014,15 +1014,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-01 08:17:25.271187: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-05-04 08:26:47.140736: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1746080245.285995  232218 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1746080245.290476  232218 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1746080245.302310  232218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1746080245.302320  232218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1746080245.302322  232218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1746080245.302325  232218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-05-01 08:17:25.306168: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1746340007.155520  276118 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1746340007.159993  276118 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1746340007.171848  276118 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1746340007.171860  276118 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1746340007.171862  276118 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1746340007.171864  276118 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-05-04 08:26:47.175715: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -1039,7 +1039,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1746080247.363431  232218 gpu_device.cc:2019] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 46761 MB memory:  -> device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:41:00.0, compute capability: 8.6\n"
+      "I0000 00:00:1746340009.101070  276118 gpu_device.cc:2019] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 46761 MB memory:  -> device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:41:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "9d5e0698",
    "metadata": {},
    "outputs": [],
@@ -1147,28 +1147,22 @@
     "    b_exp = tf.expand_dims(b, axis=0) # [1, n]\n",
     "    ma_exp = tf.expand_dims(ma, axis=0) # [1, n]\n",
     "    s_exp = tf.expand_dims(s, axis=1) # [k, 1]\n",
-    "    ta = b_exp / (ma_exp**2 - s_exp) # [k, n]\n",
-    "    ta_exp = tf.expand_dims(ta, axis=1) # [k, 1, n]\n",
-    "    g_exp = tf.expand_dims(g, axis=0) # [1, n, n]\n",
-    "    res = tf.reduce_sum(ta_exp * g_exp, axis=2)\n",
+    "    ta = b_exp / atfi.cast_complex(ma_exp**2 - s_exp) # [k, n]\n",
+    "    # ta_exp = tf.expand_dims(ta, axis=1) # [k, 1, n]\n",
+    "    # g_exp = atfi.cast_complex(tf.expand_dims(g, axis=0)) # [1, n, n]\n",
+    "    # res = tf.reduce_sum(ta_exp * g_exp, axis=2)\n",
+    "    res = tf.einsum('kj,ij->ki', ta, atfi.cast_complex(g)) # [k, n]\n",
     "    return res\n",
     "\n",
     "def prod_vector_tf(s, b, ma, g, f1, s0):\n",
-    "    # f1_exp = tf.expand_dims(f1, axis=0)\n",
-    "    # ma_exp = tf.expand_dims(ma, axis=0)\n",
-    "    # b_exp = tf.expand_dims(b, axis=0)\n",
-    "    # s_exp = tf.expand_dims(s, axis=1)\n",
-    "    # g_exp = tf.expand_dims(g, axis=0)\n",
-    "    #nr = f1_exp*tf.cast((atfi.const(1.0)-s0)/(s_exp-s0), dtype=atfi.ctype())\n",
     "    nr = prod_vector_nr_tf(s, f1, s0)\n",
     "    res = prod_vector_res_tf(s, b, ma, g)\n",
-    "    #res = tf.reduce_sum(b_exp * g_exp / (ma_exp**2 - s_exp), axis=2)\n",
     "    return res + nr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "id": "e154622b",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1184,7 @@
        "<tf.Tensor: shape=(1, 2), dtype=float64, numpy=array([[1., 1.]])>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "id": "c40db95a",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1220,7 @@
        "<tf.Tensor: shape=(2,), dtype=float64, numpy=array([ 5., 11.])>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "id": "a1cf7994",
    "metadata": {},
    "outputs": [],
@@ -1267,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "id": "ac16c81e",
    "metadata": {},
    "outputs": [],
@@ -1281,33 +1275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 49,
    "id": "91072081",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "`x` and `y` must have the same dtype, got tf.complex128 != tf.float64.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[88], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pj \u001b[38;5;241m=\u001b[39m \u001b[43mprod_vector_tf\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms_pl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbeta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm_a\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mg_ia\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfprodj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms0prod\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[87], line 26\u001b[0m, in \u001b[0;36mprod_vector_tf\u001b[0;34m(s, b, ma, g, f1, s0)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mprod_vector_tf\u001b[39m(s, b, ma, g, f1, s0):\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m# f1_exp = tf.expand_dims(f1, axis=0)\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;66;03m# ma_exp = tf.expand_dims(ma, axis=0)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;66;03m# g_exp = tf.expand_dims(g, axis=0)\u001b[39;00m\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m#nr = f1_exp*tf.cast((atfi.const(1.0)-s0)/(s_exp-s0), dtype=atfi.ctype())\u001b[39;00m\n\u001b[1;32m     25\u001b[0m     nr \u001b[38;5;241m=\u001b[39m prod_vector_nr_tf(s, f1, s0)\n\u001b[0;32m---> 26\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[43mprod_vector_res_tf\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;66;03m#res = tf.reduce_sum(b_exp * g_exp / (ma_exp**2 - s_exp), axis=2)\u001b[39;00m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m res \u001b[38;5;241m+\u001b[39m nr\n",
-      "Cell \u001b[0;32mIn[87], line 12\u001b[0m, in \u001b[0;36mprod_vector_res_tf\u001b[0;34m(s, b, ma, g)\u001b[0m\n\u001b[1;32m     10\u001b[0m ma_exp \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mexpand_dims(ma, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;66;03m# [1, n]\u001b[39;00m\n\u001b[1;32m     11\u001b[0m s_exp \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mexpand_dims(s, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m# [k, 1]\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m ta \u001b[38;5;241m=\u001b[39m \u001b[43mb_exp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mma_exp\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43ms_exp\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# [k, n]\u001b[39;00m\n\u001b[1;32m     13\u001b[0m ta_exp \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mexpand_dims(ta, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m# [k, 1, n]\u001b[39;00m\n\u001b[1;32m     14\u001b[0m g_exp \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mexpand_dims(g, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;66;03m# [1, n, n]\u001b[39;00m\n",
-      "File \u001b[0;32m~/environments/tfa/lib64/python3.9/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/environments/tfa/lib64/python3.9/site-packages/tensorflow/python/ops/math_ops.py:1434\u001b[0m, in \u001b[0;36m_truediv_python3\u001b[0;34m(x, y, name)\u001b[0m\n\u001b[1;32m   1432\u001b[0m y_dtype \u001b[38;5;241m=\u001b[39m y\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mbase_dtype\n\u001b[1;32m   1433\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x_dtype \u001b[38;5;241m!=\u001b[39m y_dtype:\n\u001b[0;32m-> 1434\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`x` and `y` must have the same dtype, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1435\u001b[0m                   \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgot \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx_dtype\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m != \u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_dtype\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1436\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1437\u001b[0m   dtype \u001b[38;5;241m=\u001b[39m _TRUEDIV_TABLE[x_dtype]\n",
-      "\u001b[0;31mTypeError\u001b[0m: `x` and `y` must have the same dtype, got tf.complex128 != tf.float64."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pj = prod_vector_tf(s_pl, beta, m_a, g_ia, fprodj, s0prod)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "id": "44b31a6d",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1294,10 @@
      "output_type": "stream",
      "text": [
       "Result: [[ 3.0714285  2.642857   6.142857 ]\n",
-      " [ 5.0769234  4.1089745 10.153847 ]]\n"
+      " [ 5.0769234  4.1089745 10.153847 ]]\n",
+      "tf.Tensor(\n",
+      "[[ 3.07142857+0.j  2.64285714+0.j  6.14285714+0.j]\n",
+      " [ 5.07692308+0.j  4.10897436+0.j 10.15384615+0.j]], shape=(2, 3), dtype=complex128)\n"
      ]
     }
    ],
@@ -1354,9 +1335,11 @@
     "\n",
     "# Compute the result\n",
     "res = tf.reduce_sum(b_exp * g_exp / (ma_exp**2 - s_exp), axis=2)  # Shape: [k, m]\n",
+    "#res2= tf.einsum('')\n",
     "\n",
     "# Print the result\n",
-    "print(\"Result:\", res.numpy())"
+    "print(\"Result:\", res.numpy())\n",
+    "print( prod_vector_res_tf(s, atfi.cast_complex(b), ma, g) )"
    ]
   },
   {
