added Kmatrix with tensorflow

--- a/notebooks/Kmatrix.ipynb
+++ b/notebooks/Kmatrix.ipynb
@@ -1346,6 +1346,53 @@
    "cell_type": "markdown",
    "id": "b97bfc5c",
    "metadata": {},
+   "source": [
+    "The K-matrix now\n",
+    "$$\n",
+    "K_{ij}(s) = \\left\\{\\sum_{\\alpha}\\frac{g_i^{(\\alpha)}g_j^{(\\alpha)}}{m_{\\alpha}^2-s} + f_{ij}^{\\text{scat}}\\frac{1.0 -s_0^{\\text{scat}}}{s -s_0^{\\text{scat}}}\\right\\} \\frac{1-s_{A0}}{s-s_{A0}}(s-s_Am^2_{\\pi}/2)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "dc9bc95b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kmatrix_sf_tf(s, sA, sA0):\n",
+    "    s_exp = tf.expand_dims(s, axis=1)\n",
+    "    sA_exp = tf.expand_dims(sA, axis=0)\n",
+    "    sA0_exp = tf.expand_dims(sA0, axis=0)\n",
+    "    factor = (s - atfi.const(0.5)*sA_exp*mpi**2) * \\\n",
+    "             (atfi.const(1.0) - sA0_exp) / (s_exp - sA0_exp)\n",
+    "    return factor\n",
+    "\n",
+    "def kmatrix_nr_tf(s, fscat, s0):\n",
+    "    s_exp = tf.expand_dims(s, axis=1)\n",
+    "    fscat_exp = tf.expand_dims(fscat, axis=0)\n",
+    "    nr = fscat_exp*(atfi.const(1.0)-s0)/(s_exp-s0)\n",
+    "    return nr\n",
+    "\n",
+    "def kmatrix_res_tf(s, ma, g):\n",
+    "    ma_exp = tf.expand_dims(ma, axis=0) # [1, n]\n",
+    "    s_exp = tf.expand_dims(s, axis=1) # [k, 1]\n",
+    "    denom = ma_exp**2 - s_exp # [k, n]\n",
+    "    numerator = tf.einsum('ia,ja->ija', g, g) # [1, n, n]\n",
+    "    tf.reduce_sum(numerator / tf.expand_dims(denom, axis=1), axis=2) # [k, n, n]\n",
+    "    return res\n",
+    "\n",
+    "def kmatrix_tf(s, ma, g, fscat, s0, sA, sA0):\n",
+    "    nr = kmatrix_nr_tf(s, fscat, s0)\n",
+    "    res = kmatrix_res_tf(s, ma, g)\n",
+    "    sf = kmatrix_sf_tf(s, sA, sA0)\n",
+    "    return (res + nr) * sf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c10f1e9f",
+   "metadata": {},
    "source": []
   }
  ],
