added belle model to the repository

--- a/notebooks/Jordis-model.ipynb
+++ b/notebooks/Jordis-model.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8e2274d4",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
     }
    ],
    "source": [
-    "belle_model = decode_model('../../d02kspipi_toys/generator/inputs/belle_model.txt')\n",
+    "belle_model = decode_model(os.environ['TFAEX_ROOT']+'/params/belle_model.txt')\n",
     "params = get_parameters(belle_model)\n",
     "for k, v in params.items():\n",
     "    print(k, v)"
