--- a/notebooks/d02kspipi-belle.ipynb
+++ b/notebooks/d02kspipi-belle.ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
     "            model[parameter_names[values[0]]] = [float(v) for v in values[1:]]\n",
     "    return model\n",
     "\n",
-    "belle_model = decode_model('../../d02kspipi_toys/generator/inputs/belle_model.txt')"
+    "belle_model = decode_model(os.environ['TFAEX_ROOT']+'/params/belle_model.txt')"
    ]
   },
   {
