--- a/notebooks/d02kspipi_mixing.ipynb
+++ b/notebooks/d02kspipi_mixing.ipynb
@@ -254,13 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "meta = atfi.const(lp.eta.mass/1000.)\n",
     "metap = atfi.const(lp.etap_958.mass/1000.)\n",
-    "belle_model = decode_model('../../d02kspipi_toys/generator/inputs/belle_model.txt')"
+    "belle_model = decode_model(os.environ['TFAEX_ROOT']+'/params/belle_model.txt')"
    ]
   },
   {
