--- a/notebooks/EffectOfMixing.ipynb
+++ b/notebooks/EffectOfMixing.ipynb
@@ -124,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2d94c207",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.environ[\"TFAEX_ROOT\"] = \"../\"\n",
-    "belle_model = decode_model('../../d02kspipi_toys/generator/inputs/belle_model.txt')"
+    "belle_model = decode_model(os.environ['TFAEX_ROOT']+'/params/belle_model.txt')"
    ]
   },
   {
